<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HEALTH APP</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">AppSanitaria</string>

    <!--RECURSOS inicio -->

    <string name="butlista">MOSTRAR LISTA</string>
    <string name="butCITA">CREAR CITA</string>
    <string name="titulo">PERFIL DE USUARIO</string>
    <string name="titulofragcita">Selección de cita</string>


    <!--RECURSOS inicio -->
    <string name="textopres">Aplicacion para concertar citas entre médico-paciente
    Desarrollada por andrestr93</string>


    <!--RECURSOS COMUNES -->
    <string name="frag_inicio">Inicio</string>
    <string name="viewtitulo_med">Inicio de Sesión Médico</string>
    <string name="viewtitulo_pac">Inicio de Sesión Paciente</string>
    <string name="txtlogin_nombre">Nombre</string>
    <string name="txtlogin_pass">Contraseña</string>
    <string name="txtapellidos">Apellidos</string>
    <string name="txtdini">Dni</string>
    <string name="perfiluser">Perfil de Usuario</string>

    <!--pantalla login medico -->
    <string name="log_colegiado">Login Colegiado</string>
    <!--pantalla registro medico -->
    <string name="txtnumcol_med">Numero Colegiado</string>
    <string name="reg_colegiado">Registro Médico</string>
    <string name="lista">Lista de Medicos</string>


    <!--pantalla login Paciente -->
    <string name="log_paciente">Login Paciente</string>
    <string name="reg_paciente">Registro Paciente</string>

    reg_colegiado
    <!--pantalla registro paciente -->
    <string name="reg_pac_social">Numero Seg Social</string>


    <!--Botones -->
    <string name="butaceptar">ACEPTAR</string>
    <string name="butcrear">CREAR CUENTA</string>


    <string name="numcolegiado">Numero Colegiado</string>
    <string name="nombre">Nombre</string>


    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="titulopcionmed">Seleccione el Médico</string>
    <string name="horacita">Hora de la Cita</string>
    <string name="fechacita">Fecha cita</string>
    <string name="butcita">Citas</string>
    <string name="infocita">Citas</string>
    <string name="infonombrecita">Nombre Medico</string>
</resources>
