<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorblanco"
    tools:context=".Actividades.Actividad_Reg_Paciente">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_paciente"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="80dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/editnombrepac"
        android:hint="@string/txtlogin_nombre"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"/>


    <EditText
        android:id="@+id/editpass_pac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/txtlogin_pass"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/editapellidopac"
        android:hint="@string/txtapellidos"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/editnumseg"
        android:hint="@string/reg_pac_social"
        android:textAlignment="center"
        android:inputType="phone"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/editdnipac"
        android:hint="@string/txtdini"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <Button
        android:layout_marginTop="50sp"
        android:id="@+id/butaceptar_pac"
        android:layout_width="127dp"
        android:textColor="@color/colorblanco"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/bordesbotones"
        android:text="@string/butaceptar"

        />


</LinearLayout>