<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorblanco"
    tools:context=".Actividades.Actividad_Reg_Medico">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_colegiado"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colornegro"
        android:textAlignment="center"
        android:layout_marginTop="80dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/editnombremed"
        android:hint="@string/txtlogin_nombre"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/editapellidosmed"
        android:hint="@string/txtapellidos"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/editcolegiadomed"
        android:hint="@string/txtnumcol_med"
        android:textAlignment="center"
        android:textStyle="bold"
        android:inputType="phone"
        android:textSize="15sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/edtidnimed"
        android:hint="@string/txtdini"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:id="@+id/edtipass_med"
        android:hint="@string/txtlogin_pass"
        android:textAlignment="center"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:textSize="15sp"/>


    <Button

        android:id="@+id/butaceptarreg_medico"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorblanco"
        android:layout_marginTop="50sp"
        android:background="@drawable/bordesbotones"
        android:text="@string/butaceptar"

        />

</LinearLayout>